@@ -8,6 +8,7 @@ https://github.com/jythontools/jython
 
 Jython 2.7.2b3
   Bugs fixed
+    - [ 2846 ] Main module __name __ is not "__main__" under Java Scripting API
     - [ 2828 ] Update netty JARs to 4.1.45
     - [ 2044 ] CVE-2013-2027 Current umask sets privileges of class files and cache
     - [ 2834 ] Import of Java classes is not thread safe
